Pointing to reddit.run

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -38,56 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pprint import pprint\n",
-    "import src.reddit.summarizer\n",
-    "import reddit.search\n",
-    "import reddit.fetch\n",
-    "\n",
-    "from core import CompanyProduct\n",
-    "from search import SearchResult\n",
-    "\n",
-    "from dataclasses import dataclass\n",
-    "from typing import List, Optional\n",
-    "from langchain_core.documents import Document\n",
-    "\n",
-    "@dataclass\n",
-    "class RedditSummary:\n",
-    "    sources: List[SearchResult]\n",
-    "    threads: List[reddit.fetch.Submission]\n",
-    "    summary_markdown: str\n",
-    "    summary_intermediate_steps: List[str]\n",
-    "    summary_input_documents: List[Document]\n",
-    "\n",
-    "def process_reddit(target: CompanyProduct, num_threads=2, min_comments=2) -> Optional[RedditSummary]:\n",
-    "    reddit_client = reddit.fetch.init()\n",
-    "\n",
-    "    # Search for URLs\n",
-    "    search_results = reddit.search.find_submissions(target, num_results=10)\n",
-    "\n",
-    "    # Fetch the Submissions from Reddit\n",
-    "    post_submissions = [reddit_client.submission(url=result.link) for result in search_results]\n",
-    "\n",
-    "    # Filter Submissions to only those with enough comments\n",
-    "    post_submissions = [submission for submission in post_submissions if submission.num_comments >= min_comments]\n",
-    "\n",
-    "    if len(post_submissions) == 0:\n",
-    "        print(f\"No posts with enough comments found for {target}\")\n",
-    "        return None\n",
-    "\n",
-    "    # Limit the number of threads\n",
-    "    post_submissions = post_submissions[:num_threads]\n",
-    "\n",
-    "    # Aggregate the summaries\n",
-    "    result = reddit.summarizer.summarize(target, post_submissions)\n",
-    "\n",
-    "    return RedditSummary(\n",
-    "        sources=search_results,\n",
-    "        threads=post_submissions,\n",
-    "        summary_markdown=result[\"output_text\"],\n",
-    "        summary_intermediate_steps=result[\"intermediate_steps\"],\n",
-    "        summary_input_documents=result[\"input_documents\"],\n",
-    "    )\n",
-    "\n"
+    "from reddit import RedditSummary, run as process_reddit"
    ]
   },
   {
