Updating the demo for Crunchbase

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -158,29 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from crunchbase import find_people_url, parse\n",
-    "import scrapfly_scrapers.crunchbase\n",
-    "import jinja2\n",
-    "from datetime import datetime\n",
-    "\n",
-    "scrapfly_scrapers.crunchbase.BASE_CONFIG[\"cache\"] = True\n",
-    "templates = jinja2.Environment(loader=jinja2.FileSystemLoader(\"templates\"))\n",
-    "\n",
-    "_response_cache = {}\n",
-    "\n",
-    "async def process_crunchbase(target: CompanyProduct, debug=False) -> str:\n",
-    "    url = find_people_url(target)\n",
-    "\n",
-    "    # For whatever reason, Scrapfly doesn't cache all the time\n",
-    "    if url not in _response_cache:\n",
-    "        _response_cache[url] = await scrapfly_scrapers.crunchbase.scrape_company(url)\n",
-    "\n",
-    "    crunchbase_raw_response = _response_cache[url]\n",
-    "    if debug:\n",
-    "        pprint(crunchbase_raw_response)\n",
-    "    organization, employees = parse(crunchbase_raw_response)\n",
-    "\n",
-    "    return templates.get_template(\"crunchbase.md\").render(organization=organization, employees=employees, current_year=datetime.now().year)\n"
+    "from crunchbase import run as process_crunchbase\n"
    ]
   },
   {
