Revising the prompt to be more detailed and verbose

--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -116,15 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-16 10:36:20.671\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm\u001b[0m\n",
-      "\u001b[32m2024-08-16 10:36:20.690\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm, scraping remaining 2 pages\u001b[0m\n"
+      "\u001b[32m2024-08-16 10:45:14.323\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m105\u001b[0m - \u001b[1mscraping reviews from https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm\u001b[0m\n",
+      "\u001b[32m2024-08-16 10:45:14.341\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m113\u001b[0m - \u001b[1mscraped first page of reviews of https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm, scraping remaining 2 pages\u001b[0m\n"
      ]
     },
     {
@@ -6173,7 +6173,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-16 10:36:22.217\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 21 reviews from https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm in 3 pages\u001b[0m\n"
+      "\u001b[32m2024-08-16 10:45:15.989\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.glassdoor\u001b[0m:\u001b[36mscrape_reviews\u001b[0m:\u001b[36m123\u001b[0m - \u001b[1mscraped 21 reviews from https://www.glassdoor.com/Reviews/Singularity-6-Reviews-E3342660.htm in 3 pages\u001b[0m\n"
      ]
     },
     {
@@ -6184,8 +6184,8 @@
       "Glassdoor: The summary has 4,416 characters, 19% of the input\n",
       "News: 195,232 characters of context, 44 articles\n",
       "News: The summary has 5,952 characters, 3% of the input\n",
-      "unified_summary: input_content_length=20,840 chars, output_content_length=13,971 chars (67%)\n",
-      "Written to evaluation/Singularity_6_Palia/20240816_103721.md\n"
+      "unified_summary: input_content_length=20,840 chars, output_content_length=13,455 chars (65%)\n",
+      "Written to evaluation/Singularity_6_Palia/20240816_104626.md\n"
      ]
     }
    ],
@@ -6229,12 +6229,12 @@
     "\n",
     "OUTPUT CONTENT AND FORMAT\n",
     "\n",
-    "Follow this template to summarize the most important information about a company and its product. Each markdown section has tips on what information is most critical.\n",
+    "Loosely follow this template in your report. Each markdown section has tips on what information is most critical.\n",
     "\n",
     "# About {company_name}\n",
     "\n",
     "The About section should provide all the essential information about the company.\n",
-    "An ideal summary should incorporate the answers to the following questions:\n",
+    "An ideal section should at least incorporate the answers to the following questions, if available:\n",
     "- When was the company founded?\n",
     "- Approximately how many employees work at the company?\n",
     "- What products does the company produce? What services does the company offer?\n",
@@ -6244,6 +6244,8 @@
     "- How are the company's products distributed or sold to users?\n",
     "\n",
     "# Key personnel\n",
+    "\n",
+    "Include the names and roles of any key personnel at the company. If possible, provide a brief summary of their background and experience as well as any sentiments expressed about them in the sources.\n",
     "\n",
     "# News (reverse chronological, grouped by event)\n",
     "\n",
@@ -6263,7 +6265,9 @@
     "\n",
     "## Negative sentiments and experiences\n",
     "\n",
-    "## Verifyable statements about working at {company_name}\n",
+    "## Neutral statements about working at {company_name}\n",
+    "\n",
+    "This section might include general statements about location, benefits, and other factual information that could be verified.\n",
     "\n",
     "# User reviews, sentiments, and feedback about {product_name}\n",
     "\n",
@@ -6271,14 +6275,16 @@
     "\n",
     "## Negative sentiments and experiences\n",
     "\n",
-    "## Verifyable statements about using {product_name}\n",
+    "## Neutral statements about {product_name}\n",
+    "\n",
+    "This section could include general, neutral statements about the product, its features, distribution, key product changes, pricing, and so on.\n",
     "\n",
     "# Bibliography\n",
     "\n",
     "The Bibliography should include a list of all the sources used to compile the summary. If there are many sources, group them by type (e.g., Reddit, Glassdoor, News, Crunchbase).\n",
     "\n",
     "\n",
-    "Feel free to create subheadings or additional sections as needed to capture the most important information about the company and its product.\n",
+    "Feel free to create subheadings or additional sections as needed to capture all relevant information about the company and its product.\n",
     "Format the output as a markdown document, using markdown links for citations.\n",
     "Citations should follow the format [(Author, Source, Date)](url).\n",
     "            \"\"\",\n",
