--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -1882,6 +1882,14 @@
     "    with open(eval_filename(target, extension=\"md\"), \"w\") as f:\n",
     "        f.write(result.content)\n",
     "\n",
+    "        f.write(\"\"\"\n",
+    "                \n",
+    "----\n",
+    "\n",
+    "# INTERMEDIATE RESULTS BELOW\n",
+    "Note: The report above is an aggregation of all the information below. I like to include the intermediate outputs below for debugging and verification. For instance, if the final output has a very brief section on employee sentiment, I can refer to the Glassdoor and Reddit sections below to see if it's a problem in the overall summarization or if the intermediate results were lacking.\n",
+    "\"\"\")\n",
+    "\n",
     "        # Write the raw Reddit summary too\n",
     "        f.write(f\"\\n----\\n# Reddit\\n{nest_markdown(reddit_result.summary.output_text, 1)}\\n\\n\")\n",
     "\n",
