Refactor to Loguru!

--- a/src/test_crunchbase.ipynb
+++ b/src/test_crunchbase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-12 17:00:32.607\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n"
+      "\u001b[32m2024-08-13 11:03:43.715\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mscrapfly_scrapers.crunchbase\u001b[0m:\u001b[36mscrape_company\u001b[0m:\u001b[36m60\u001b[0m - \u001b[1mscraping company: https://www.crunchbase.com/organization/98point6/people\u001b[0m\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# 98point6 Inc., founded 2015-03-01\n",
+      "# 98point6 Inc., founded 2015-03-01 ((Crunchbase, 2024)[https://www.crunchbase.com/organization/98point6])\n",
       "98point6 is a digital care service that delivers personalized consultation, diagnosis, and treatment to patients. The company combines deep technology with the expertise of board-certified physicians to provide text-based care anytime, anywhere. The company meets consumers where they are by offering private, text-based diagnosis and treatment via a mobile app. \n",
       "\n",
       "The company was founded in 2015 and is headquartered in Seattle, Washington.\n",
@@ -412,10 +412,31 @@
    ],
    "source": [
     "import jinja2\n",
+    "from datetime import datetime\n",
     "\n",
     "env = jinja2.Environment(loader=jinja2.FileSystemLoader(\"templates\"))\n",
     "\n",
-    "print(env.get_template(\"crunchbase.md\").render(organization=organization, employees=employees))"
+    "print(env.get_template(\"crunchbase.md\").render(organization=organization, employees=employees, current_year=datetime.now().year))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('98point6', 'https://www.crunchbase.com/organization/98point6/people')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "organization.id, url"
    ]
   },
   {
