--- a/src/unified_v2.ipynb
+++ b/src/unified_v2.ipynb
@@ -1819,6 +1819,7 @@
     "\n",
     "\n",
     "from core import URLShortener\n",
+    "from loguru import logger\n",
     "\n",
     "\n",
     "async def unified_summary(target: CompanyProduct, num_reddit_threads=2, max_glassdoor_review_pages=1, max_glassdoor_job_pages=1, max_news_articles=10, glassdoor_url=None):\n",
@@ -1846,7 +1847,8 @@
     "    input_content_length = len(reddit_result.summary.output_text) + len(glassdoor_result.summary_markdown) + len(news_result.summary_markdown) + len(crunchbase_markdown)\n",
     "    output_content_length = len(result.content)\n",
     "\n",
-    "    print(f\"unified_summary: input_content_length={input_content_length:,} chars, output_content_length={output_content_length:,} chars ({output_content_length/input_content_length:.0%})\")\n",
+    "    # print(f\"unified_summary: input_content_length={input_content_length:,} chars, output_content_length={output_content_length:,} chars ({output_content_length/input_content_length:.0%})\")\n",
+    "    logger.info(f\"{input_content_length:,} -> {output_content_length:,} chars ({output_content_length/input_content_length:.0%})\")\n",
     "\n",
     "\n",
     "    with open(eval_filename(target, extension=\"md\"), \"w\") as f:\n",
